--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,64 @@
 /*  your css code here. If applicable */
+* {
+	padding:0px;
+	margine:0px;
+}
+body {
+	background-color:#f5f5f5;
+}
+.nav {
+	color:white;
+	background-color:#011e29;
+	width:100%;;
+	display:flex;
+	text-align:center;
+	height:80px;
+	justify-content:center;
+}
+
+.body {
+	display:flex;
+	justify-content:space-evenly;
+}
+.latest-news-section{
+	margin:8px;
+	width:250px;
+	height:200px;
+	background-color:white;
+	border-radius:10px;
+	padding:20px;
+	text-align:center;
+	justify-content:center;
+	
+}
+
+.mainArticle {
+	margin:8px;
+	width:600px;
+	height:250px;
+	background-color:white;
+	border-radius:10px;
+	text-align:center;
+	justify-content:center;
+	padding:20px;
+}
+
+.pictorial-news-section {
+	margin-top:8px;
+	width:200px;
+	height:500px;
+	background-color:white;
+	flex-direction:column;
+	border-radius:10px;
+	display:flex;
+	text-align:center;
+	justify-content:space-evenly;
+	
+}
+
+.pictorial-news-section img {
+	padding:8px;
+}
+
+
+
