--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,14 @@
 body {
 	background-color:#f5f5f5;
 }
+header {
+	text-align: center;
+}
 .header {
 	color:white;
 	background-color:#011e29;
 	width:100%;;
 	display:flex;
-	text-align:center;
 	height:80px;
 	justify-content:center;
 }
